--- a/blog/templates/blog/single_post_page.html
+++ b/blog/templates/blog/single_post_page.html
@@ -5,16 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blog</title>
+    <title>{{ post.title }} - Blog</title>
 </head>
 <body>
-    <h1>Blog</h1>
+    <nav>
+        <a href="/blog">Blog</a>
+    </nav>
 
-{% for p in posts %}
-    <hr/>
-    <h2>{{ p.title }}</h2>
-    <h4>{{ p.created_at }}</h4>
-    <p>{{ p.content }}</p>
-{% endfor %}
+    <h2>{{ post.title }}</h2>
+    <h4>{{ post.created_at }}</h4>
+    <p>{{ post.content }}</p>
 </body>
 </html>
