--- a/blog/templates/blog/single_post_page.html
+++ b/blog/templates/blog/single_post_page.html
@@ -15,5 +15,8 @@
     <h2>{{ post.title }}</h2>
     <h4>{{ post.created_at }}</h4>
     <p>{{ post.content }}</p>
+
+    <hr/>
+    <h3>댓글이 들어옴</h3>
 </body>
 </html>
