--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,175 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blog</title>
-</head>
-<body>
-    <h1>Blog</h1>
+    <head>
+        <meta charset="UTF-8">
+        <title>Blog list</title>
+        <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
+        <script src="https://kit.fontawesome.com/d440af0ce0.js" crossorigin="anonymous"></script> <!--fontawesome 아이콘 이미지-->
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Django</a>
+                <button class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-{% for p in post_list %}
-    <hr/>
-    <h2><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
-    <h4>{{ p.created_at }}</h4>
-    <p>{{ p.content }}</p>
-{% endfor %}
-</body>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./blog_list.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about_me.html">About Me</a>
+                        </li>
+
+
+
+
+                        <li class="nav-item dropdown">
+                            <a  class="nav-link dropdown-toggle"
+                                href="#"
+                                id="navbarDropdown"
+                                role="button"
+                                data-toggle="dropdown"
+                                aria-haspopup="true"
+                                aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
+                                Disabled
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto"> <!-- 왼쪽(left) 여백(margin)을 최대한 확보 -->
+                        <li class="nav-item">
+                            <!-- trigger modal -->
+                            <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">log in</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Modal - login 페이지 -->
+        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">
+                    <i class="fa-solid fa-right-to-bracket" style="color: #a9c8fe;"></i>
+                    &nbsp Log in
+                </h1>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <button type="button" class="btn btn-outline-primary btn-block btn-sm">
+                              <i class="fa-brands fa-square-google-plus" style="color: #ee2f2f;"></i>
+                              Log in with Google
+                          </button>
+                          <button type="button" class="btn btn-outline-primary btn-block btn-sm">
+                              <i class="fa-regular fa-envelope" style="color: #48026e;"></i>
+                              Log in with E-mail
+                          </button>
+                      </div>
+                      <div class="col-md-6">
+                          <button type="button" class="btn btn-outline-primary btn-block btn-sm">
+                              <i class="fa-regular fa-envelope" style="color: #48026e;"></i>
+                              Sign Up with E-mail
+                          </button>
+                      </div>
+                  </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="container my-3">
+            <div class="row">
+                <div class="col-md-8 col-lg-9">
+                    <h1>Blog</h1>
+
+                    {% for p in post_list %}
+
+                    <!-- Blog Post -->
+                    <div class="card mb-4">
+                        <img class="card-img-top" src="https://via.placeholder.com/750x300" alt="이미지 파일">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ p.title }}</h5>
+                            <p class="card-text">{{ p.content }}</p>
+                            <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Posted on {{ p.created_at }} by
+                            <a href="#">작성자 명이 들어감(나중에 함)</a>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    
+                    <!-- Blog Post -->
+                    <div class="card mb-4">
+
+                    </div>
+                    <!-- Pagination -->
+                    <ul class="pagination justify-content-center my-4">
+                        <li class="page-item">
+                            <a class="page-link" href="#">&larr; Older</a>
+                        </li>
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#">Newer &rarr;</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-lg-3">
+                    <!-- Search widget-->
+                    <div class="card my-4">
+                        <h5 class="card-header">Search</h5>
+
+                    </div>
+                    <!-- Categories -->
+                    <div class="card my-4">
+                        <h5 class="card-header">Categories</h5>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="py-5 bg-dark">
+            <div class="container">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; Yuni Website 2023
+                </p>
+            </div>
+        </footer>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    </body>
 </html>
