포스트 목록 페이지에 대표이미지 출력하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -118,7 +118,7 @@
 
                     <!-- Blog Post -->
                     <div class="card mb-4">
-                        <img class="card-img-top" src="https://via.placeholder.com/750x300" alt="이미지 파일">
+                        <img class="card-img-top" src="{{ p.head_image.url }}" alt="이미지 파일">
                         <div class="card-body">
                             <h5 class="card-title">{{ p.title }}</h5>
                             <p class="card-text">{{ p.content }}</p>
