--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -45,7 +45,13 @@
                             <!-- Post categories-->
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="..." /></figure>
+                        <figure class="mb-4">
+                        {% if post.head_image %}
+                            <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image" />
+                        {% else %}
+                            <img class="img-fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/800/300" alt="random_image" />
+                            </figure>
+                        {% endif %}
                         <!-- Post content-->
                         <section class="mb-5">
                             <hr>
