--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -113,9 +113,7 @@
             <div class="row">
                 <div class="col-md-8 col-lg-9">
                     <h1>Blog</h1>
-
                     {% for p in post_list %}
-
                     <!-- Blog Post -->
                     <div class="card mb-4">
                         {% if p.head_image %}
@@ -124,8 +122,11 @@
                             <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/300" alt="random_image">
                         {% endif %}
                         <div class="card-body">
-                            <h5 class="card-title">{{ p.title }}</h5>
-                            <p class="card-text">{{ p.content }}</p>
+                            <h2 class="card-title">{{ p.title }}</h2>
+                            {% if p.hook_text %}
+                                <h5 class="text-muted">{{ p.hook_text }}</h5>
+                            {% endif %}
+                            <p class="card-text">{{ p.content | truncatewords:45 }}</p>
                             <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
                         </div>
                         <div class="card-footer text-muted">
