--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -111,30 +111,35 @@
 
         <div class="container my-3">
             <div class="row">
-                <div class="col-md-8 col-lg-9">
+                <div class="col-md-8 col-lg-9" id="main-area">
                     <h1>Blog</h1>
-                    {% for p in post_list %}
-                    <!-- Blog Post -->
-                    <div class="card mb-4">
-                        {% if p.head_image %}
-                            <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
-                        {% else %}
-                            <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/300" alt="random_image">
-                        {% endif %}
-                        <div class="card-body">
-                            <h2 class="card-title">{{ p.title }}</h2>
-                            {% if p.hook_text %}
-                                <h5 class="text-muted">{{ p.hook_text }}</h5>
+                    
+                    {% if post_list.exists %} <!-- 만약에 post_list가 존재한다면 -->
+                        {% for p in post_list %}
+                        <!-- Blog Post -->
+                        <div class="card mb-4">
+                            {% if p.head_image %}
+                                <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
+                            {% else %}
+                                <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/300" alt="random_image">
                             {% endif %}
-                            <p class="card-text">{{ p.content | truncatewords:45 }}</p>
-                            <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
+                            <div class="card-body">
+                                <h2 class="card-title">{{ p.title }}</h2>
+                                {% if p.hook_text %}
+                                    <h5 class="text-muted">{{ p.hook_text }}</h5>
+                                {% endif %}
+                                <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+                                <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
+                            </div>
+                            <div class="card-footer text-muted">
+                                Posted on {{ p.created_at }} by
+                                <a href="#">작성자 명이 들어감(나중에 함)</a>
+                            </div>
                         </div>
-                        <div class="card-footer text-muted">
-                            Posted on {{ p.created_at }} by
-                            <a href="#">작성자 명이 들어감(나중에 함)</a>
-                        </div>
-                    </div>
-                    {% endfor %}
+                        {% endfor %}
+                    {% else %}
+                        <h3>아직 게시물이 없습니다.</h3>
+                    {% endif %}
 
                     <!-- Pagination -->
                     <ul class="pagination justify-content-center my-4">
