--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">Django</a>
+        <a class="navbar-brand" href="/">Django</a>
         <button
             class="navbar-toggler"
             type="button"
@@ -8,35 +8,30 @@
             data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html"
-                        >Home<span class="sr-only">(current)</span></a
-                    >
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./blog_list.html">Blog</a>
+                    <a class="nav-link" href="/blog">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./about_me.html">About Me</a>
+                    <a class="nav-link" href="/about_me">About Me</a>
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a
-                        class="nav-link dropdown-toggle"
+                    <a class="nav-link dropdown-toggle"
                         href="#"
                         id="navbarDropdown"
                         role="button"
                         data-toggle="dropdown"
                         aria-haspopup="true"
-                        aria-expanded="false"
-                    >
+                        aria-expanded="false">
                         Dropdown
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,9 +51,9 @@
                 <!-- 왼쪽(left) 여백(margin)을 최대한 확보 -->
                 <li class="nav-item">
                     <!-- trigger modal -->
-                    <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal"
-                        >log in</a
-                    >
+                    <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">
+                        log in
+                    </a>
                 </li>
             </ul>
         </div>
