--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,14 @@
     <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
     <h5 class="text-muted">{{ post.hook_text }}</h5>
     <!-- Post meta content-->
-    <div class="text-muted fst-italic mb-2">{{ post.created_at }} by 작성자 들어감</div>
+    <!-- Author -->
+        <p class="lead">
+            by
+            <a href="#">{{ post.author | upper }}</a>
+        </p>
+        <hr>
+    <!-- Date/Time -->
+        <p>Posted on {{ post.created_at }}</p>
     <!-- Post categories-->
 
     <!-- Preview image figure-->
