--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -26,7 +26,7 @@
     </div>
     <div class="card-footer text-muted">
         Posted on {{ p.created_at }} by
-        <a href="#">작성자 명이 들어감(나중에 함)</a>
+        <a href="#">{{ p.author | upper }}</a>
     </div>
 </div>
 {% endfor %} {% else %}
