--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,8 +31,24 @@
                         <h5 class="card-header">Search</h5>
                     </div>
                     <!-- Categories -->
-                    <div class="card my-4">
+                    <div class="card my-4" id="categories-card">
                         <h5 class="card-header">Categories</h5>
+                        <div calss="card-body">
+                            <ul>
+                                {% for category in categories %}
+                                <li>
+                                    <a href="{{ category.get_absolute_url}}">
+                                        {{ category }} ({{ category.post_set.count }})
+                                    </a>
+                                </li>
+                                {% endfor %}
+                                <li>
+                                    <a href="/blog/category/no_category">
+                                        미분류 ({{ no_category_post_count }})
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
