--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,7 @@
 <!-- 만약에 post_list가 존재한다면 -->
 {% for p in post_list %}
 <!-- Blog Post -->
-<div class="card mb-4">
+<div class="card mb-4" id="post-{{ p.pk }}">
     {% if p.head_image %}
     <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" />
     {% else %}
@@ -17,6 +17,15 @@
     />
     {% endif %}
     <div class="card-body">
+        {% if p.category %}
+            <span class="badge bg-secondary float-right">
+                {{ p.category }}
+            </span>
+        {% else %}
+            <span class="badge bg-secondary float-right">
+                미분류
+            </span>
+        {% endif %}
         <h2 class="card-title">{{ p.title }}</h2>
         {% if p.hook_text %}
         <h5 class="text-muted">{{ p.hook_text }}</h5>
