포스트 상세페이지에 카테고리 기능 추가

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,6 +2,15 @@
 {% block head_title %} {{ post.title}} - Blog{% endblock %} 
 {% block main_area %}
 <div id="post-area">
+    {% if post.category %}
+        <span class="badge bg-secondary float-right">
+            {{ post.category }}
+        </span>
+    {% else %}
+        <span class="badge bg-secondary float-right">
+            미분류
+        </span>
+    {% endif %}
     <!-- Post title-->
 
     <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
