--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,12 @@
             {{ category }}   
         </span>
     {% endif %}
+    {% if tag %}
+        <span class="badge badge-light">
+            <i class="fas fa-tags"></i>
+            {{ tag }}   ({{ tag.post_set.count }})
+        </span>
+    {% endif %}
 </h1>
 
 {% if post_list.exists %}
@@ -47,7 +53,7 @@
                     </span>
                 </a>
             {% endfor %}
-                <br><br>
+            <br><br>
         {% endif %}
         
         <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
