--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,8 +20,14 @@
         <p class="lead">
             by
             <a href="#">{{ post.author | upper }}</a>
+            {% if user.is_authenticated and user == post.author %}
+                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{ post.pk }}" role="button">
+                    <i class="fas fa-tags"></i>&nbsp;&nbsp; Edit Post
+                </a>
+            {% endif %}
         </p>
         <hr>
+        
     <!-- Date/Time -->
         <p>Posted on {{ post.created_at }}</p>
     <!-- Post categories-->
