--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,7 +3,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <title>{% block head_title %}Blog{% endblock %}</title>
+        <title icon="fa-solid fa-house">{% block head_title %}Blog{% endblock %}</title>
         <link
             rel="stylesheet"
             href="{% static 'blog/bootstrap/bootstrap.min.css' %}"
