--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -51,13 +51,8 @@
 </nav>
 
 <!-- Modal - login 페이지 -->
-<div
-    class="modal fade"
-    id="loginModal"
-    tabindex="-1"
-    aria-labelledby="loginModalLabel"
-    aria-hidden="true"
->
+<div class="modal fade" id="loginModal" tabindex="-1"
+    aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
