구글 로그인 수정

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -27,7 +27,6 @@
                         <li>Work Experience</li>
                         <ul>
                             <li>파이썬 장고(Python Django Enfineering)</li>
-                            <li>OO 회사 - (~)</li>
                         </ul>
                         <li>Education</li>
                         <ul>
@@ -39,7 +38,7 @@
                 </div>
                 
                 <div class="col-lg-4">
-                    <img class="img-fluid" src="{% static 'single_pages/images/about_me.jpg' %}">
+                    <img class="img-fluid" src="{% static 'single_pages/images/양성윤.png' %}">
                 </div>
         
             </div>
